<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LectureLoot</string>
    <string name="action_settings">Settings</string>
    <string name="action_stats">Statistics</string>
    <string name="schedule_title">Schedule</string>
    <string name="dashboard_title">Dashboard</string>
    <string name="wager_title">Wagers</string>
    <string name="department_code">DEPT</string>
    <string name="user_name">User\'s Name</string>
    <string name="create_wager">Create a Wager</string>
    <string name="check_in_button">Check In</string>
    <string name="checked_in_button">Checked In</string>
    <string name="pay_attention"> Get off your phone and pay attention</string>
    <string name="done_for_day">You don\'t have any more classes today</string>
    <string name="user_total_points">800pts</string>
    <string name="course_code">CAP3032 \nCSE E221</string>
    <string name="time_before_class">15:00</string>
    <string name="user_streak1">I\'ve attended </string>
    <string name="user_streak2"> consecutive lectures</string>
    <string name="user_lectures_remaining_notice">Lectures Remain This Week</string>
    <string name="user_statistics">User Statistics</string>
    <string name="deptCodeLabel">Department Code:</string>
    <string name="courseNumLabel">Course Number:</string>
    <string name="sectionNumLabel">Section Number:</string>
    <string name="deptCodeHint">e.g. CEN</string>
    <string name="courseNumHint">e.g. 3031</string>
    <string name="sectionNumHint">e.g. 5842</string>
    <string name="settings_notification">Example Notification</string>
    <string name="dialog_drop_course_text">Are you sure you want to drop this course?</string>
    <string name="title_activity_splash">Loading...</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_register">Register</string>
    <string name="action_logout">Logout</string>
    <string name="action_report_cancelled_meeting">Class Cancelled?</string>
    <string name="classCancelledText">Choose cancelled class:</string>
    <string name="classCancellationConfirmation">Confirm</string>
    <string name="dialog_confirm_logout_text">Do you really want to log out?</string>
    <string name="title_activity_settings">Settings</string>
	<string name="title_activity_account_settings">Account Settings</string>
	<string name="title_activity_payment_information">Modify Payment Information</string>
	<string name="title_activity_notifications_settings">Notifications</string>
	<string name="title_activity_tutorial">Tutorial</string>
	<string name="title_activity_FAQ">FAQ/Help</string>
	<string name="title_activity_report_issue">Report an Issue</string>
	<string name="title_activity_terms_of_service">Terms of Service</string>
</resources>