<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     
        android:id="@+id/next_class_display"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="#45FF0000"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp" >

        <Button
            android:id="@+id/check_in_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFF5555"
            android:gravity="center_vertical|center_horizontal"
            android:height="48dp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:text="@string/check_in_button"
            android:textAlignment="gravity"
            android:textColor="#FFFFFFFF"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:baselineAligned="true"
            android:orientation="horizontal"
            android:weightSum="1" >

            <TextView
                android:id="@+id/nextMeeting"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight=".5"
                android:gravity="bottom|left"
                android:text="@string/course_code"
                android:textColor="#FFFFFFFF"
                android:textSize="24sp"
                android:paddingBottom="10dp" />

            <TextView
                android:id="@+id/timeLeft"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight=".5"
                android:gravity="bottom|right"
                android:text="@string/time_before_class"
                android:textColor="#FFFF5555"
                android:textSize="62sp"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>
    